2008-05-20 Jim Garlick <garlick@llnl.gov>

	* src/repquota.c : Fix error an error message.

	* src/repquota.1 : Fix option descriptions.

2008-05-20 Jim Garlick <garlick@llnl.gov>

	* : tag 1.10

	* src/* : Main source moved here.

	* test/* : Test infrastructure created here with some initial tests.

	* getquota.c : Add some test hooks.

	* quota.spec.in : Use install target.

	* src/Makefile.am : Add man pages to man_MANS. 

	* src/listint.[ch] : Simple list-of-ints handling functions.

	* src/repquota.c : Change --min-uid, --max-uid option to --uid-range.
	Swap -u and -U.

2008-05-19 Jim Garlick <garlick@llnl.gov>

	* getquota.[ch], quota.c : If not in -v mode and warnings are
	issued, notify user to run -v to get more info.

	* quota.c : Add getopt_long() support.

2008-05-13 Jim Garlick <garlick@llnl.gov>

	* config/*, Makefile.in, configure, INSTALL : 
	Checked in bootstrap products.

2008-05-12 Jim Garlick <garlick@llnl.gov>

	* : Integrated with automake/autoconf.

2008-05-07 Jim Garlick <garlick@llnl.gov>

	* getquota.c : Factor common code from repquota.c and quota.c.
	Add test hooks.

	* quota.c : Use a List to manage quota results like repquota.
	Allow unqualified uid's to be passed in for testing.
	
2008-05-06 Jim Garlick <garlick@llnl.gov>

	* util.c : Add lsd_* error handling functions.

	* Makefile : Add LSD_* to CFLAGS.

	* getquota_nfs.c : Only allow root to query another's quota.

2008-05-05 Jim Garlick <garlick@llnl.gov>

	* repquota.c : Add HAS_GETOPT_LONG.  Add root check.

2008-05-02 Jim Garlick <garlick@llnl.gov>

	* repquota.c : Add -u option to report only usage information.

2008-05-02 Jim Garlick <garlick@llnl.gov>

	* : tag 1.9

2008-05-01 Jim Garlick <garlick@llnl.gov>

	* getquota.c : Implement fs-neutral getquota() interface.

	* repquota.c : Quota reporting program.

	* list.[ch]: New from lsd-tools.

2008-05-01 Jim Garlick <garlick@llnl.gov>

	* quota.c : Add initial support for Lustre quotas.
	Rewrite crufty reporting functions.